--- a/RaffleWeb/App/Home/Home.html
+++ b/RaffleWeb/App/Home/Home.html
@@ -7,9 +7,9 @@
     <script src="../../Scripts/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!--<script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>-->
-    <script src="./Home-local.js"></script>
-    <!--<script src="./Home.js"></script>-->
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+    <!--<script src="./Home-local.js"></script>-->
+    <script src="./Home.js"></script>
     <link href="Home.css" rel="stylesheet" />
 </head>
 <body>
@@ -100,14 +100,8 @@
             saveSetting(Raffle);
             init_runtime();
         }
-
-        function unloadScrollBars() {
-            $("body").css("overflow", "hidden");
-            document.body.scroll = "no";
-        }
         var time = 0;
         function init_runtime() {
-            unloadScrollBars();
             $("#edit").addClass("hidden");
             $("#runtime").removeClass("hidden");
             Raffle = loadSetting();
